# 2geda-test-project

./: db.sqlite3  pyproject.toml
DjangoMail/: asgi.py  settings.py  urls.py  wsgi.py
authentication/: auth.py
client/: __init__.py  response.py
main/: exception.py  models.py  serializers.py  urls.py  views.py
main/migrations/: 0001_initial.py
repository/: user.py
utils/: mail.py  task.py  validation.py
